# registerDemo

./: .cursorrules  README.md
client/: package-lock.json  package.json
client/src/: App.vue
client/src/router/: index.js
client/src/services/: api.js
client/src/views/: Home.vue  Login.vue  Register.vue
server/: .env  Cargo.toml
server/migrations/: 20240101_create_users.sql
server/src/: handlers.rs  main.rs  models.rs  utils.rs
